[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_examples"
version = "0.1.0"
authors = [
    { name="Sam Hollings", email="sam.hollings1@nhs.net" }
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/SamHollings/llm_examples"
